# self-pc-first-setup-python

./: .env  README.md  pyproject.toml
src/self_pc_first_setup_python/: __init__.py
