[project]
name = "self-pc-first-setup"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/self_pc_first_setup_python"]

[[sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

